--- a/templates/myapp/index.html
+++ b/templates/myapp/index.html
@@ -7,6 +7,22 @@
             background: -webkit-gradient(linear, left top, left bottom, from(#10131c), to(#759685)) no-repeat fixed;
         }
 
+        .btn-link {
+            color: #ffffff;
+            text-shadow: 0 6px 6px 0 rgba(0, 0, 0, 0.35);
+            font-weight: bold;
+            background-color: transparent;
+            border-color: transparent;
+            font-family: "Leelawadee UI Semilight", serif;
+            box-shadow: none;
+            border-radius: 0;
+            cursor: pointer;
+        }
+
+        .btn-link:hover {
+            color: orange;
+        }
+
         input[id] {
             font-size: 24px;
             font-family: "Leelawadee UI Semilight", serif;
@@ -53,9 +69,44 @@
             border: 3px solid orange;
         }
 
-        img {
+        img[alt="logo-collab"] {
             padding: 0 100px;
         }
+
+        img[alt="logo-uniba"] {
+            padding: 0 100px;
+        }
+
+        footer {
+            font-style: normal;
+            color: #ffffff;
+            padding: 20px 0;
+            height: 244px;
+            display: block;
+            box-sizing: border-box;
+            font-family: "Leelawadee UI Semilight", sans-serif;
+
+        }
+
+        .outer > div {
+            margin: 2px;
+            background-color: #181a27;
+            width: 100%;
+
+        }
+
+        .outer {
+            display: flex;
+            justify-content: center;
+            padding: 3px;
+            text-align: center;
+            height: 100%;
+        }
+
+        img[alt="logo-collab-footer"] {
+            padding: 0 20px;
+        }
+
     </style>
     {% load static %}
     <title>mini-IPIP test</title>
@@ -99,4 +150,24 @@
     <i>Psychological Assessment</i>, 18, 192-203
 </label>
 </body>
+<footer>
+    <div class="outer">
+        <div>
+            {% load static %}
+            <a href="http://collab.di.uniba.it/"><img src="{% static "myapp/logo-collab.png" %}"
+                                                      alt="logo-collab-footer" height="75px" width="200px"></a>
+            <br><strong>Collaborative Development Group</strong><br><br>Department of Computer Science
+            <br>University of Bari<br>Italy<br>
+        </div>
+        <div>
+            <h2>Contact us</h2>
+            <form action="mailto:collab-uniba@gmail.com?subject=Mini-IPIP test">
+                <button class="btn-link" value="send-email" name="send-email" type="submit">Send an email</button>
+                </form>
+            <form onclick="location.href='/privacy'">
+                <button class="btn btn-link" value="privacy" name="privacy" type="button">Site Privacy</button>
+            </form>
+        </div>
+    </div>
+</footer>
 </html>
