CSS updates to reduce vertical spacing in evaluation

--- a/templates/myapp/evaluation.html
+++ b/templates/myapp/evaluation.html
@@ -70,13 +70,17 @@
         margin-top: -20px;
         color: lightgrey;
     }
+    p[id="description"]{
+        margin-top: -10px;
+        text-align: left;
+    }
     .info{
         background-color: whitesmoke;
         border-radius: 3px;
     }
     input[id="email_string"] {
             height: 35px;
-            width: 100%;
+            width: 15%;
             line-height: 1.42857143;
             font-size: 14px;
             border: 0;
@@ -109,48 +113,46 @@
 
     <h2 align="left">Openness</h2>
         <p id="content" align="left"> High=inventive/curious vs. Low=consistent/cautious</p>
-        <p align="left">
+        <p id="description">
             This trait refers to the extent to which a person is open to experiencing a variety of activities, proactively seeking and appreciating unfamiliar experiences for its own sake. People with low scores in Openness tend to be more conservative and close-minded. </p>
-        <p align="left">
-        From the way you answered the questions, you seem to describe yourself as someone who dislikes needless complexity, and prefers the familiar over the unusual. To reflect on your level of Openness, ask yourself:  <em>How do I respond to people who have lots of new ideas?</em>
+        <p id="description">
+            To further reflect on your level of Openness, ask yourself:  <em>How do I respond to people who have lots of new ideas?</em>
         </p>
 
     <h2 align="left">Coscientiousness</h2>
         <p id="content" align="left"> High=efficient/organized vs. Low=easy-going/careless</p>
-        <p align="left">
+        <p id="description">
             This trait refers to people's tendency to plan in advance, act in an organized or thoughtful way and their degree of organization, persistence, and motivation in goal-directed behavior.  Individuals with low Conscientiousness levels tend to be more tolerant and less bound by rules and plans. </p>
-        <p align="left">
-        From your responses it appears that depending on the situation, you can make quick decisions or deliberate for longer if necessary. To further reflect on your level of Coscientiousness, ask yourself: <em>How do I organize my workload?</em>
+        <p id="description">
+            To further reflect on your level of Coscientiousness, ask yourself: <em>How do I organize my workload?</em>
         </p>
 
     <h2 align="left">Extraversion</h2>
         <p align="left" id="content">High=outgoing/energetic vs. Low=solitary/reserved</p>
-        <p align="left">
-        This trait refers to the tendency to seek stimulation in the company of others, thus assessing people's amount of interpersonal interaction, activity level, need for stimulation, and capacity for joy. Those low in Extraversion are reserved and solitary.
+        <p id="description">
+            This trait refers to the tendency to seek stimulation in the company of others, thus assessing people's amount of interpersonal interaction, activity level, need for stimulation, and capacity for joy. Those low in Extraversion are reserved and solitary.
         </p>
-    <p align="left">
-        From the way you answered the questions, you seem to describe yourself as someone who enjoys
-        and actively seeks out social occasions, but would say that they're not everything. To further reflect on your level of Extraversion, ask yourself:  <em> What role do I tend to play in a team? (at work or in social activities)</em>
-    </p>
+        <p id="description">
+            To further reflect on your level of Extraversion, ask yourself:  <em> What role do I tend to play in a team? (at work or in social activities)</em>
+        </p>
 
     <h2 align="left">Agreeableness</h2>
         <p align="left" id="content">High=friendly/compassionate vs. Low=challenging/detached</p>
-        <p align="left">
+        <p id="description">
             This trait refers to a person's tendency to be compassionate and cooperative toward others, with respect to thoughts, feelings, and actions. Low Agreeableness is related to being suspicious, challenging, and antagonistic towards other people.
         </p>
-    <p align="left">
-        From the way you answered the questions, you seem to describe yourself as someone who people can find
-        difficult to get along with when you first meet, as you can be suspicious of their motives. To further reflect on your level of Agreeableness, ask yourself:  <em>When others are experiencing problems, what do I do?</em>
-    </p>
+        <p id="description">
+            To further reflect on your level of Agreeableness, ask yourself:  <em>When others are experiencing problems, what do I do?</em>
+        </p>
 
         <h2 align="left">Neuroticism</h2>
         <p align="left" id="content">High=sensitive/nervous vs. Low=secure/confident</p>
-        <p align="left">
+        <p id="description">
             This trait refers to the extent to which a person's emotions are sensitive to the environment, thus identifying individuals who lack in emotional stability, prone to psychological distress, anxiety, excessive cravings or urges. Those who have a low score in Neuroticism are calmer and more stable.
         </p>
-    <p align="left">
-        To further reflect on your level of Neuroticism, ask yourself: <em>Which situations make me feel under pressure and which situations do not?</em>
-    </p>
+        <p id="description">
+            To further reflect on your level of Neuroticism, ask yourself: <em>Which situations make me feel under pressure and which situations do not?</em>
+        </p>
 </div>
 <div align="center"><p></p>
     <form method="post">
