Modify templates for the new name

--- a/templates/miniipip/privacy.html
+++ b/templates/miniipip/privacy.html
@@ -55,10 +55,10 @@
     </style>
     {% load static %}
     <title>mini-IPIP test</title>
-    <link rel="shortcut icon" href="{% static "myapp/favicon.ico" %}"/>
-    <a href="http://collab.di.uniba.it/"><img src="{% static "myapp/logo-collab.png" %}" alt="logo-collab" height="75px"
+    <link rel="shortcut icon" href="{% static "miniipip/favicon.ico" %}"/>
+    <a href="http://collab.di.uniba.it/"><img src="{% static "miniipip/logo-collab.png" %}" alt="logo-collab" height="75px"
                                               width="200px"></a>
-    <a href="https://www.uniba.it/"><img src="{% static "myapp/logo-uniba.png" %}"
+    <a href="https://www.uniba.it/"><img src="{% static "miniipip/logo-uniba.png" %}"
                                          alt="logo-uniba" height="75px" width="200px" align="right"></a>
 </head>
 <body>
@@ -86,7 +86,7 @@
         <div class="outer">
             <div>
                 {% load static %}
-                <a href="http://collab.di.uniba.it/"><img src="{% static "myapp/logo-collab.png" %}"
+                <a href="http://collab.di.uniba.it/"><img src="{% static "miniipip/logo-collab.png" %}"
                                                           alt="logo-collab-footer" height="75px" width="200px"></a>
                 <br><strong>Collaborative Development Group</strong><br><br>Department of Computer Science
                 <br>University of Bari<br>Italy<br>
