--- a/templates/miniipip/test.html
+++ b/templates/miniipip/test.html
@@ -1,95 +1,10 @@
 <html lang="en">
 <head><title>mini-IPIP test</title>
     {% load static %}
-    <link rel="shortcut icon" href="{% static "miniipip/favicon.ico" %}"/>
-<style>
-    html{
-        padding-top: 100px;
-        font-family: "Leelawadee UI Semilight",serif;
-         background-color: #10131c;
-        background: -webkit-gradient(linear, left top, left bottom, from(#10131c), to(#759685)) no-repeat fixed;
-       }
-    div[id]{
-        background-color: white;color: black;
-        border-radius: 3px;
-    }
-    h1[id]{
-        font-size: 35px;
-    }
-    input[id]{
-    font-size:24px;
-    width: 100%;
-    min-width: 50px; 
-    max-width: 350px; 
-    color: white;
-    border-radius: 3px;
-    font-family: "Leelawadee UI Semilight",serif;
-    border: 3px solid #181a27;
-    background-color: #181a27;
-    text-align: left;
-    cursor: pointer;
-    box-shadow: 0 3px 4px 0 rgba(0,0,0,0.35);
-    }
-
-    input[id]:hover{
-        border: 3px solid orange;
-    }
-    input[id="previous"]{
-        font-size: 20px;
-        border: 3px solid #ffffff;
-        background-color: #ffffff;
-        color: black;
-        text-align: center;
-        cursor: pointer;
-        padding: 0 5%;
-        box-shadow: 0 3px 4px 0 rgba(0,0,0,0.35);
-    }
-    footer {
-            font-style: normal;
-            color: #ffffff;
-            padding: 20px 0;
-            height: 244px;
-            display: block;
-            box-sizing: border-box;
-            font-family: "Leelawadee UI Semilight", sans-serif;
-
-        }
-
-        .outer > div {
-            margin: 2px;
-            background-color: #181a27;
-            width: 100%;
-
-        }
-
-        .outer {
-            display: flex;
-            justify-content: center;
-            padding: 3px;
-            text-align: center;
-            height: 100%;
-        }
-
-        img[alt="logo-collab-footer"] {
-            padding: 0 20px;
-        }
-        .btn-link {
-            color: #ffffff;
-            text-shadow: 0 6px 6px 0 rgba(0, 0, 0, 0.35);
-            font-weight: bold;
-            background-color: transparent;
-            border-color: transparent;
-            font-family: "Leelawadee UI Semilight", serif;
-            box-shadow: none;
-            border-radius: 0;
-            cursor: pointer;
-        }
-
-        .btn-link:hover {
-            color: orange;
-        }
-
-</style></head>
+    <link rel="shortcut icon" href="{% static "miniipip/images/favicon.ico" %}"/>
+    <link href="../../static/miniipip/css/common.css" rel="stylesheet" type="text/css">
+    <link href="../../static/miniipip/css/test_.css" rel="stylesheet" type="text/css">
+</head>
 {% for question in questions %}
     <div id="content">
     <h1 align="center" id="header"> {{ question.question_text }} </h1>
@@ -131,7 +46,7 @@
     <div class="outer">
         <div>
             {% load static %}
-            <a href="http://collab.di.uniba.it/"><img src="{% static "miniipip/logo-collab.png" %}"
+            <a href="http://collab.di.uniba.it/"><img src="{% static "miniipip/images/logo-collab.png" %}"
                                                       alt="logo-collab-footer" height="75px" width="200px"></a>
             <br><strong>Collaborative Development Group</strong><br><br>Department of Computer Science
             <br>University of Bari<br>Italy<br>
