--- a/templates/miniipip/index.html
+++ b/templates/miniipip/index.html
@@ -18,7 +18,7 @@
     <p>This test measures your <b>Big Five</b> personality [1]. The Big Five is one of the most popular scientific
         measures of personality.</p>
     <p>You will be presented with 20 statements, one at a time, and you will be asked to evaluate the extent to which
-        you agree with them on a 5-point scale [<i>Strongly Disagree</i> = 1, ..., <i>Strongly Agree</i> = 5]. You may
+        you agree with them on a 5-point scale, from <i>Very inaccurate</i> to <i>Very accurate</i>. You may
         go back
         and change a previous answer, but you cannot skip forward. Please, answer honestly with regard to how you see
         yourself in the present moment,
