--- a/static/miniipip/css/help_improve_.css
+++ b/static/miniipip/css/help_improve_.css
@@ -3,33 +3,31 @@ form {
     color: white;
 }
 
-div {
-    font-weight: bold;
-}
-
 label {
     color: white;
 }
+
 /*values to insert in form*/
 input[id], select {
-    height: 35px;
+    height: 30px;
     width: 100%;
     line-height: 1.42857143;
     font-size: 14px;
     padding: 2px 2px;
     cursor: pointer;
-    background-color: white;
+    background-color: whitesmoke;
     color: black;
     border: 3px;
     box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.35);
 }
+
 /* submit and no thanks buttons */
 .btn-primary:hover {
     border: 3px solid orange;
 }
 
 .btn-primary {
-    color: #ffffff !important;
+    color: whitesmoke !important;
     background-color: #181a27;
     box-shadow: 0 6px 6px 0 rgba(0, 0, 0, 0.35);
     border-radius: 3px;
@@ -41,5 +39,3 @@ input[id], select {
     margin-right: 10px;
     cursor: pointer;
 }
-
-
