--- a/templates/miniipip/help_improve.html
+++ b/templates/miniipip/help_improve.html
@@ -369,12 +369,12 @@
         <div>
             {% load static %}
             <a href="http://collab.di.uniba.it/"><img src="{% static "miniipip/images/logo-collab.png" %}"
-                                                      alt="logo-collab-footer" height="75px" width="200px"></a>
-            <br><strong>Collaborative Development Group</strong><br><br>Department of Computer Science
-            <br>University of Bari<br>Italy<br>
+                                                      alt="logo-collab-footer" height="65px"></a>
+            <br><strong>Collaborative Development Group</strong><br>Department of Computer Science
+            <br>University of Bari, Italy
         </div>
         <div>
-            <h2>Contact us</h2>
+            <h3>Contact us</h3>
             <form action="mailto:collab-uniba@gmail.com?subject=Mini-IPIP test">
                 <button class="btn-link" value="send-email" name="send-email" type="submit">Send an email</button>
                 </form>
